# predictPump

./: .env.production.example  .gitignore  Anchor.toml  DEMO_GUIDE.md  DEPLOYMENT.md  DEPLOYMENT_SUMMARY.md  GITHUB_VERCEL_SOLANA_DEPLOYMENT.md  LOCAL_SETUP.md  QUICK_DEPLOY_GUIDE.md  README.md  docker-compose.prod.yml  docker-compose.yml  install-docker.sh  package-lock.json  package.json  tsconfig.json
.github/workflows/: solana-deploy.yml  vercel-deploy.yml
.kiro/specs/prediction-pump/: design.md  requirements.md  tasks.md
backend/: .env.example  .eslintrc.json  package-lock.json  package.json  tsconfig.json
backend/migrations/: 001_initial_schema.sql  002_social_features.sql  003_blockchain_sync.sql  004_notifications.sql
backend/src/: index.ts
backend/src/config/: database.ts
backend/src/controllers/: MarketController.ts
backend/src/middleware/: auth.ts  validation.ts
backend/src/routes/: marketData.ts  notifications.ts  social.ts
backend/src/scripts/: db-cli.ts  (+1 more)
frontend/: .env.example  .env.local.example  .env.production  .eslintrc.json  Dockerfile.prod  README.md  TEST_SUMMARY.md  jest.config.js  next.config.js  next.config.prod.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vercel.json
frontend/e2e/: market-discovery.spec.ts  trading-flow.spec.ts  wallet-connection.spec.ts
monitoring/: alert_rules.yml  prometheus.yml  promtail.yml
programs/prediction-pump/: Cargo.toml
programs/prediction-pump/src/: bonding_curve.rs  lib.rs  settlement.rs  tests.rs
scripts/: deploy.sh  monitor.sh
tests/: prediction-pump.ts
(+93 files in other folders)
